--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <img src="B12-A5-Emergency-Hotline/assets/logo.png" alt="logo" class="w-[50px] h-[50px]">
         <h1 class="text-lg font-bold text-[#006747] leading-tight">Emergency <br> Service</h1>
       </div>
-      <div class="flex justify-center">
+      <div class="flex justify-center items-center gap-2">
         <p class="bg-[#41ff6b]/10 h-[52px] w-[106px] flex justify-center items-center gap-2 rounded-[50px]">
           <span id="heart">0</span>
           <img src="B12-A5-Emergency-Hotline/assets/heart.png" alt="heart" class="w-[30px] h-[30px]">
@@ -316,11 +316,12 @@
             <i class="fa-solid fa-clock text-gray-600"></i>
             <h2 class="font-semibold text-lg">Call History</h2>
           </div>
-          <button
+          <button onclick="clearHistory()"
             class="text-sm text-white flex items-center justify-center gap-1 w-[114px] h-[40px] bg-[#00A63E] rounded-[52px] hover:bg-green-700 transition duration-200">
             Clear
           </button>
         </div>
+        <div id="history"></div>
 
       </div>
 
