--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
           <span id="credit">100</span> <img src="B12-A5-Emergency-Hotline/assets/coin.png" alt="coin"
             class="w-[24px] h-[24px]">
         </p>
-        <p
-          class="text-[16px] font-medium text-white bg-[#00A63E] h-[52px] w-[127px] flex justify-center items-center rounded-[50px] cursor-pointer hover:bg-green-700 transition">
-          Copy</p>
+        <div
+          class="text-[16px] flex justify-between items-center gap-2 font-medium text-white bg-[#00A63E] h-[52px] w-[127px] flex justify-center items-center rounded-[50px] cursor-pointer hover:bg-green-700 transition">
+          <span id="copy">0</span> <span>Copy</span>
+        </div>
       </div>
     </div>
   </nav>
@@ -78,7 +79,7 @@
             <span class="inline-block bg-green-100 text-green-700 text-xs px-3 py-1 rounded-full mt-1">All</span>
           </div>
           <div class="flex justify-between mt-6">
-            <button
+            <button onclick="copyToClipboard(1)"
               class="flex items-center justify-center gap-2 border border-gray-300 bg-white px-3 py-2 rounded-lg w-[48%] h-[40px] hover:bg-gray-800 hover:text-white transition duration-200">
               <i class="fa-solid fa-copy"></i> Copy
             </button>
@@ -105,7 +106,7 @@
             <span class="inline-block bg-blue-100 text-blue-700 text-xs px-3 py-1 rounded-full mt-1">Law & Order</span>
           </div>
           <div class="flex justify-between mt-6">
-            <button
+            <button onclick="copyToClipboard(2)"
               class="flex items-center justify-center gap-2 border border-gray-300 bg-white px-3 py-2 rounded-lg w-[48%] h-[40px] hover:bg-gray-800 hover:text-white transition duration-200">
               <i class="fa-solid fa-copy"></i> Copy
             </button>
@@ -132,7 +133,7 @@
             <span class="inline-block bg-red-100 text-red-700 text-xs px-3 py-1 rounded-full mt-1">Fire</span>
           </div>
           <div class="flex justify-between mt-6">
-            <button
+            <button onclick="copyToClipboard(3)"
               class="flex items-center justify-center gap-2 border border-gray-300 bg-white px-3 py-2 rounded-lg w-[48%] h-[40px] hover:bg-gray-800 hover:text-white transition duration-200">
               <i class="fa-solid fa-copy"></i> Copy
             </button>
@@ -159,7 +160,7 @@
             <span class="inline-block bg-red-100 text-red-700 text-xs px-3 py-1 rounded-full mt-1">Health</span>
           </div>
           <div class="flex justify-between mt-6">
-            <button
+            <button onclick="copyToClipboard(4)"
               class="flex items-center justify-center gap-2 border border-gray-300 bg-white px-3 py-2 rounded-lg w-[48%] h-[40px] hover:bg-gray-800 hover:text-white transition duration-200">
               <i class="fa-solid fa-copy"></i> Copy
             </button>
@@ -186,7 +187,7 @@
             <span class="inline-block bg-red-100 text-red-700 text-xs px-3 py-1 rounded-full mt-1">Help</span>
           </div>
           <div class="flex justify-between mt-6">
-            <button
+            <button onclick="copyToClipboard(5)"
               class="flex items-center justify-center gap-2 border border-gray-300 bg-white px-3 py-2 rounded-lg w-[48%] h-[40px] hover:bg-gray-800 hover:text-white transition duration-200">
               <i class="fa-solid fa-copy"></i> Copy
             </button>
@@ -213,7 +214,7 @@
             <span class="inline-block bg-red-100 text-red-700 text-xs px-3 py-1 rounded-full mt-1">Govt.</span>
           </div>
           <div class="flex justify-between mt-6">
-            <button
+            <button onclick="copyToClipboard(6)"
               class="flex items-center justify-center gap-2 border border-gray-300 bg-white px-3 py-2 rounded-lg w-[48%] h-[40px] hover:bg-gray-800 hover:text-white transition duration-200">
               <i class="fa-solid fa-copy"></i> Copy
             </button>
@@ -240,7 +241,7 @@
             <span class="inline-block bg-red-100 text-red-700 text-xs px-3 py-1 rounded-full mt-1">Electricity</span>
           </div>
           <div class="flex justify-between mt-6">
-            <button
+            <button onclick="copyToClipboard(7)"
               class="flex items-center justify-center gap-2 border border-gray-300 bg-white px-3 py-2 rounded-lg w-[48%] h-[40px] hover:bg-gray-800 hover:text-white transition duration-200">
               <i class="fa-solid fa-copy"></i> Copy
             </button>
@@ -267,7 +268,7 @@
             <span class="inline-block bg-red-100 text-red-700 text-xs px-3 py-1 rounded-full mt-1">NGO</span>
           </div>
           <div class="flex justify-between mt-6">
-            <button
+            <button onclick="copyToClipboard(8)"
               class="flex items-center justify-center gap-2 border border-gray-300 bg-white px-3 py-2 rounded-lg w-[48%] h-[40px] hover:bg-gray-800 hover:text-white transition duration-200">
               <i class="fa-solid fa-copy"></i> Copy
             </button>
@@ -294,7 +295,7 @@
             <span class="inline-block bg-red-100 text-red-700 text-xs px-3 py-1 rounded-full mt-1">Travel</span>
           </div>
           <div class="flex justify-between mt-6">
-            <button
+            <button onclick="copyToClipboard(9)"
               class="flex items-center justify-center gap-2 border border-gray-300 bg-white px-3 py-2 rounded-lg w-[48%] h-[40px] hover:bg-gray-800 hover:text-white transition duration-200">
               <i class="fa-solid fa-copy"></i> Copy
             </button>
