--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <!-- Navbar -->
   <nav class="py-6 px-6 max-w-[1920px] mx-auto">
-    <div class="flex justify-between items-center">
+    <div class="flex flex-col md:flex-row justify-between items-center">
 
       <div class="flex items-center gap-5">
         <img src="B12-A5-Emergency-Hotline/assets/logo.png" alt="logo" class="w-[50px] h-[50px]">
@@ -61,7 +61,7 @@
     <div class="grid grid-cols-1 lg:grid-cols-4 gap-6">
 
       <!--All Cards-->
-      <div class="lg:col-span-3 grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-3 gap-6">
+      <div class="lg:col-span-3 grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-3 gap-6 w-full">
         <!-- Card: 1 -->
         <div class="bg-white rounded-2xl shadow-md p-4 flex flex-col justify-between h-[360px]">
           <div class="flex items-center justify-between">
