--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </nav>
 
   <!-- Hero Section -->
-  <section class="max-w-[1920px] mx-auto bg-gradient-to-r from-[#013122] via-[#006747] to-[#013223]">
+  <section class="max-w-[1920px] mx-auto bg-gradient-to-r from-[#013122] via-[#006747] to-[#013223] mb-[48px]">
     <div class="flex flex-col justify-center items-center py-8 px-6 text-center">
       <img src="B12-A5-Emergency-Hotline/assets/logo-dark.png" alt="logo-dark" class="w-[92px] h-[92px] mb-4">
       <h1 class="text-[28px] md:text-[40px] font-bold text-white">Emergency Service Directory</h1>
